# python-project-50

./: .gitignore  Makefile  README.md  demo1.cast  example.py  pyproject.toml
gendiff/: __init__.py  arg_parser.py  diff_format.py  generate.py  generator.py  parse.py  parser.py
gendiff/format/: __init__.py  data_to_str.py  formater.py  json.py  plain.py  stylish.py  stylish.py'  stylish.py\
gendiff/scripts/: gendiff.py
tests/: test_diff_format.py  test_gendiff.py  test_generate.py
tests/fixtures/: file_result.json  file_result_tmp.json
