[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10"
]
authors = ["Rust <afarg1710@gmail.com>"]
repository = "https://github.com/RustSaf/python-project-50"
readme = "README.md"
packages = [{ include = "gendiff" }, { include = "gendiff/scripts" }, { include = "tests" },]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
